--- a/index.html
+++ b/index.html
@@ -12,23 +12,54 @@
 
 <body>
 
+  <div id="loader">
+    <img src="https://64.media.tumblr.com/260b2755fafaca65949c6a62bf96c7c2/tumblr_ppkogvE2ky1v2yk7yo1_1280.gif" alt="Dog running">
+  </div>
   <nav>
-      <h1 class="logo" href="#"><img src="haven-logo.png" alt="Your Logo"></h1>
-      <div class="menu-icon">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Adopt</a></li>
-        <li><a href="#">Donate</a></li>
-        <li><a href="#">Contact Us</a></li>
-      </ul>
-      <button type="button">Volunteer</button>
-    </nav>
+    <h1 class="logo" href="#"><img src="haven-logo.png" alt="Your Logo"></h1>
+    <div class="menu-icon">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <ul class="menu">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Adopt</a></li>
+      <li><a href="#">Donate</a></li>
+      <li><a href="#">Contact Us</a></li>
+    </ul>
+    <button type="button">Volunteer</button>
+  </nav>
 
+  <div class="container">
+    <h1>Heading with Responsive Image</h1>
+    <div class="row">
+      <div class="col-sm-8">
+        <img src="example-image.jpg" class="img-fluid" alt="Responsive Image">
+      </div>
+      <div class="col-sm-4">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat massa vel sapien porttitor, sit amet bibendum justo fermentum. In hac habitasse platea dictumst. Morbi bibendum quam eget lorem suscipit, eu bibendum felis molestie. Aliquam erat volutpat. Nullam a aliquam ante. Nam congue pretium tortor a lacinia.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <h1>Responsive Images</h1>
+    <p>Here is some context for the images:</p>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="example-image1.jpg" class="img-fluid" alt="Responsive Image 1">
+      </div>
+      <div class="col-sm-4">
+        <img src="example-image2.jpg" class="img-fluid" alt="Responsive Image 2">
+      </div>
+      <div class="col-sm-4">
+        <img src="example-image3.jpg" class="img-fluid" alt="Responsive Image 3">
+      </div>
+    </div>
+  </div>
+  
 
 
   
