--- a/index.html
+++ b/index.html
@@ -1,67 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" type="text/css" href="style.css" />
-  <script type="text/javascript" src="script.js"></script>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
-<body>
+    <script
+      src="https://kit.fontawesome.com/dc2922df3c.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.10/vue.min.js"></script>
 
-  <div id="loader">
-    <img src="https://64.media.tumblr.com/260b2755fafaca65949c6a62bf96c7c2/tumblr_ppkogvE2ky1v2yk7yo1_1280.gif" alt="Dog running">
-  </div>
-  <nav>
-    <h1 class="logo" href="#"><img src="haven-logo.png" alt="Your Logo"></h1>
-    <div class="menu-icon">
-      <span></span>
-      <span></span>
-      <span></span>
+    <link rel="stylesheet" href="./css/index.css" />
+    <script src="./js/nav.js" defer></script>
+
+    <title>Document</title>
+  </head>
+
+  <body>
+    <!-- Header and the navbar -->
+    <nav class="header sticky-top" data-visible="false">
+      <header class="container primary-header flex">
+        <div>
+          <a href="index.html"
+            ><img src="./img/haven-logo.png" class="logo"
+          /></a>
+        </div>
+
+        <button
+          class="mobile-nav-toggle"
+          aria-controls="primary-navigation"
+          aria-expanded="false"
+        >
+          <span class="sr-only">Menu</span>
+        </button>
+
+        <ul
+          id="primary-navigation"
+          data-visible="false"
+          class="primary-navigation flex"
+        >
+          <li>
+            <form id="app" action="#">
+              <label :data-state="state" for="search">
+                <input
+                  type="text"
+                  placeholder="Type to search.."
+                  @click="state = 'opan'"
+                  @blur="state='close'"
+                />
+                <i class="fa fa-search" @click="" aria-hidden="true"></i>
+              </label>
+            </form>
+            <div id="bcl">
+              <a
+                style="font-size: 8pt; text-decoration: none"
+                href="http://www.devanswer.com"
+              ></a>
+            </div>
+          </li>
+          <li class="active">
+            <a href="index.html">Home </a>
+          </li>
+          <li>
+            <a href="about_us.html">About</a>
+          </li>
+          <li>
+            <a href="adopt.html">Adopt</a>
+          </li>
+
+          <li>
+            <a href="donate.html">Donate</a>
+          </li>
+          <li>
+            <a href="contact_us.html">Contact</a>
+          </li>
+
+          <li>
+            <button class="volunter-button" type="button">Volunteer</button>
+          </li>
+        </ul>
+      </header>
+    </nav>
+
+    <!-- Dog running -->
+
+    <div id="loader">
+      <img
+        src="https://64.media.tumblr.com/260b2755fafaca65949c6a62bf96c7c2/tumblr_ppkogvE2ky1v2yk7yo1_1280.gif"
+        alt="Dog running"
+      />
     </div>
-    <ul class="menu">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Adopt</a></li>
-      <li><a href="#">Donate</a></li>
-      <li><a href="#">Contact Us</a></li>
-    </ul>
-    <button type="button">Volunteer</button>
-  </nav>
 
-  <div class="container">
-    <h1>Heading with Responsive Image</h1>
-    <div class="row">
-      <div class="col-sm-8">
-        <img src="example-image.jpg" class="img-fluid" alt="Responsive Image">
-      </div>
-      <div class="col-sm-4">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat massa vel sapien porttitor, sit amet bibendum justo fermentum. In hac habitasse platea dictumst. Morbi bibendum quam eget lorem suscipit, eu bibendum felis molestie. Aliquam erat volutpat. Nullam a aliquam ante. Nam congue pretium tortor a lacinia.</p>
-      </div>
+    <div
+      class="container"
+      style="padding: 15px 15px 2500px; font-size: 30px; margin-top: 30px"
+    >
+      <p>
+        <b
+          >This example demonstrates how to hide a navbar when the user starts
+          to scroll the page.</b
+        >
+      </p>
+      <p>Scroll down this frame to see the effect!</p>
+      <p>Scroll up to show the navbar.</p>
+      <p>
+        Lorem ipsum dolor dummy text sit amet, consectetur adipiscing elit, sed
+        do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+        ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+        in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+        officia deserunt mollit anim id est laborum.
+      </p>
+      <p>
+        Lorem ipsum dolor dummy text sit amet, consectetur adipiscing elit, sed
+        do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+        ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+        in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+        officia deserunt mollit anim id est laborum.
+      </p>
     </div>
-  </div>
 
-  <div class="container">
-    <h1>Responsive Images</h1>
-    <p>Here is some context for the images:</p>
-    <div class="row">
-      <div class="col-sm-4">
-        <img src="example-image1.jpg" class="img-fluid" alt="Responsive Image 1">
-      </div>
-      <div class="col-sm-4">
-        <img src="example-image2.jpg" class="img-fluid" alt="Responsive Image 2">
-      </div>
-      <div class="col-sm-4">
-        <img src="example-image3.jpg" class="img-fluid" alt="Responsive Image 3">
-      </div>
-    </div>
-  </div>
-  
-
-
-  
-</body>
+    <!-- End of the navbar-->
+  </body>
 </html>
