--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
   </head>
 
   <body>
+    <!-- Dog running -->
+
+    <div id="loader">
+      <img
+        src="https://64.media.tumblr.com/260b2755fafaca65949c6a62bf96c7c2/tumblr_ppkogvE2ky1v2yk7yo1_1280.gif"
+        alt="Dog running"
+      />
+    </div>
+
     <!-- Header and the navbar -->
     <nav class="header sticky-top" data-visible="false">
       <header class="container primary-header flex">
@@ -90,15 +99,6 @@
       </header>
     </nav>
 
-    <!-- Dog running -->
-
-    <div id="loader">
-      <img
-        src="https://64.media.tumblr.com/260b2755fafaca65949c6a62bf96c7c2/tumblr_ppkogvE2ky1v2yk7yo1_1280.gif"
-        alt="Dog running"
-      />
-    </div>
-
     <div
       class="container"
       style="padding: 15px 15px 2500px; font-size: 30px; margin-top: 30px"
@@ -132,5 +132,56 @@
     </div>
 
     <!-- End of the navbar-->
+
+    <!-- Footer of the page -->
+
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="footer-col">
+            <h4>About Aveco</h4>
+            <ul>
+              <li><a href="#">Profile</a></li>
+              <li><a href="#">Governance</a></li>
+              <li><a href="#">Disclosures</a></li>
+              <li><a href="#">Investors Relation</a></li>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Advocacies</a></li>
+              <li><a href="#">Competative Selection</a></li>
+              <li><a href="#">Process</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Explore Aveco</h4>
+            <ul>
+              <li><a href="#">For Homes</a></li>
+              <li><a href="#">For Biz</a></li>
+              <li><a href="#">For Enterprise</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>News & Advisories</h4>
+            <ul>
+              <li><a href="#">Maintenance Schedule</a></li>
+              <li><a href="#">Meter Deposit Refund</a></li>
+              <li><a href="#">Rates Archives</a></li>
+              <li><a href="#">Latest News & Press Releases</a></li>
+              <li><a href="#">Safety Tips</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Sign Up Now!</h4>
+            <h4>Contuct Us</h4>
+            <div class="social-links">
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
