Adding new files on our repository

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <a href="index.html">Home </a>
           </li>
           <li>
-            <a href="about_us.html">About</a>
+            <a href="about.html">About</a>
           </li>
           <li>
             <a href="adopt.html">Adopt</a>
@@ -89,7 +89,7 @@
             <a href="donate.html">Donate</a>
           </li>
           <li>
-            <a href="contact_us.html">Contact</a>
+            <a href="contact.html">Contact</a>
           </li>
 
           <li>
