--- a/index.html
+++ b/index.html
@@ -139,32 +139,24 @@
       <div class="container">
         <div class="row">
           <div class="footer-col">
-            <h4>About Aveco</h4>
+            <h4>About Safe haven</h4>
             <ul>
               <li><a href="#">Profile</a></li>
-              <li><a href="#">Governance</a></li>
-              <li><a href="#">Disclosures</a></li>
-              <li><a href="#">Investors Relation</a></li>
-              <li><a href="#">Careers</a></li>
+              <li><a href="#">Donate</a></li>
               <li><a href="#">Advocacies</a></li>
-              <li><a href="#">Competative Selection</a></li>
-              <li><a href="#">Process</a></li>
             </ul>
           </div>
           <div class="footer-col">
-            <h4>Explore Aveco</h4>
+            <h4>Explore safe haven</h4>
             <ul>
-              <li><a href="#">For Homes</a></li>
-              <li><a href="#">For Biz</a></li>
-              <li><a href="#">For Enterprise</a></li>
+              <li><a href="#">For Homes & shelter</a></li>
+              <li><a href="#">For volunteers</a></li>
             </ul>
           </div>
           <div class="footer-col">
             <h4>News & Advisories</h4>
             <ul>
-              <li><a href="#">Maintenance Schedule</a></li>
-              <li><a href="#">Meter Deposit Refund</a></li>
-              <li><a href="#">Rates Archives</a></li>
+              <li><a href="#">Medical mission</a></li>
               <li><a href="#">Latest News & Press Releases</a></li>
               <li><a href="#">Safety Tips</a></li>
             </ul>
