--- a/donate.html
+++ b/donate.html
@@ -99,7 +99,62 @@
       </header>
     </nav>
 
-    <div
-      class="container"
-      style="padding: 15px 15px 2500px; font-size: 30px; margin-top: 30px"
-    >
+    <!-- End of the navbar-->
+
+    <!-- wave fotter -->
+
+    <section class="wave-header">
+      <div class="wave wave1"></div>
+      <div class="wave wave2"></div>
+      <div class="wave wave3"></div>
+      <div class="wave wave4"></div>
+    </section>
+
+    <!-- Footer of the page -->
+
+    <footer class="footer pb-1">
+      <div class="container">
+        <div class="row">
+          <div class="footer-col">
+            <h4>About Safe haven</h4>
+            <ul>
+              <li><a href="#">Profile</a></li>
+              <li><a href="#">Donate</a></li>
+              <li><a href="#">Advocacies</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Explore safe haven</h4>
+            <ul>
+              <li><a href="#">For Homes & shelter</a></li>
+              <li><a href="#">For volunteers</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>News & Advisories</h4>
+            <ul>
+              <li><a href="#">Medical mission</a></li>
+              <li><a href="#">Latest News & Press Releases</a></li>
+              <li><a href="#">Safety Tips</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Contuct Us</h4>
+            <div class="social-links">
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bottom pt-4">
+        <p>
+          <em> © 2023 Safe Haven. All Rights Reserved.</em>
+        </p>
+      </div>
+    </footer>
+  </body>
+</html>
