--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <script src="./js/nav.js" defer></script>
 
-    <title>Document</title>
+    <title>Home</title>
   </head>
 
   <body>
@@ -169,38 +169,9 @@
       </header>
     </nav>
 
-    <div class="container">
-      <p>
-        <b
-          >This example demonstrates how to hide a navbar when the user starts
-          to scroll the page.</b
-        >
-      </p>
-      <p>Scroll down this frame to see the effect!</p>
-      <p>Scroll up to show the navbar.</p>
-      <p>
-        Lorem ipsum dolor dummy text sit amet, consectetur adipiscing elit, sed
-        do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-        ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-        in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-        officia deserunt mollit anim id est laborum.
-      </p>
-      <p>
-        Lorem ipsum dolor dummy text sit amet, consectetur adipiscing elit, sed
-        do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-        ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-        in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-        officia deserunt mollit anim id est laborum.
-      </p>
-    </div>
-
     <!-- End of the navbar-->
 
-    <!-- wave foter -->
+    <!-- wave fotter -->
 
     <section class="wave-header">
       <div class="wave wave1"></div>
@@ -251,10 +222,7 @@
       </div>
       <div class="bottom pt-4">
         <p>
-          <em>
-            © 2023 The Philippine Animal Welfare Society. All Rights
-            Reserved.</em
-          >
+          <em> © 2023 Safe Haven. All Rights Reserved.</em>
         </p>
       </div>
     </footer>
