--- a/about.html
+++ b/about.html
@@ -18,6 +18,22 @@
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.10/vue.min.js"></script>
 
+    <!-- Font style of About Us-->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@800&family=Phudu:wght@300;600&family=Poppins:wght@100&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@800&family=Phudu:wght@300;600&family=Poppins:wght@100&family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./css/index.css" />
     <script src="./js/nav.js" defer></script>
 
@@ -102,6 +118,10 @@
     <!-- End of the navbar-->
 
     <!-- Contents -->
+    <div class="about_us">
+      <img src="./img/banner.jpg" class="banner" alt="Dog and cat" />
+      <div class="bottom-left"><h1>About Us</h1></div>
+    </div>
 
     <!-- wave footer -->
 
