added contents on contact.html file, edited CSS and JS file

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,10 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.10/vue.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+    />
 
     <link rel="stylesheet" href="./css/index.css" />
     <script src="./js/nav.js" defer></script>
@@ -98,6 +102,137 @@
         </ul>
       </header>
     </nav>
+
+    <!-- contact us -->
+
+    <section class="contacts">
+      <div class="contents">
+        <h2><strong>Contact Us</strong></h2>
+        <p>Send us your details and we will get in touch with you.</p>
+      </div>
+      <div class="container container5">
+        <div class="contactInfo">
+          <div class="box">
+            <div class="icon"><i class="bi bi-geo-alt"></i></div>
+            <div class="text">
+              <h3><strong>Headquarters</strong></h3>
+              G/F, Main Mall, Seaside Blvd, 123,<br />Pasay, Metro Manila<br />1300
+            </div>
+          </div>
+          <div class="box">
+            <div class="icon"><i class="bi bi-telephone-forward"></i></div>
+            <div class="text">
+              <h3><strong>Phone</strong></h3>
+              <p>+63912-345-6789</p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="icon"><i class="bi bi-envelope"></i></div>
+            <div class="text">
+              <h3><strong>Email</strong></h3>
+              <p>safehaven@gmail.com</p>
+            </div>
+          </div>
+        </div>
+        <div class="contactForm">
+          <form>
+            <h2>Send Message</h2>
+            <div class="inputBox mb-3">
+              <label for="fullname" class="form-label">Full Name</label>
+              <input type="text" class="form-control" id="fullname" />
+            </div>
+            <div class="inputBox mb-3">
+              <label for="email" class="form-label">Email Address</label>
+              <input type="email" class="form-control" id="email" />
+            </div>
+            <div class="inputBox mb-3">
+              <label for="exampleTextarea1" class="form-label">Message</label>
+              <textarea
+                class="form-control"
+                id="exampleTextarea1"
+                placeholder="Type your message here..."
+              ></textarea>
+            </div>
+            <button type="submit" class="btn">
+              <i class="bi bi-send">Send</i>
+            </button>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <!-- map -->
+
+    <section>
+      <div class="container container8">
+        <h1 class="maph1"><strong>You can find us here!</strong></h1>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3862.107220897932!2d120.97881611483946!3d14.535859089843719!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397cbfc84288ed7%3A0xe842057d2e701f9b!2sSM%20Mall%20of%20Asia!5e0!3m2!1sen!2sph!4v1676800842036!5m2!1sen!2sph"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
+    </section>
+
+    <!-- FAQ -->
+
+    <section class="sectionfaq">
+      <div class="container container6">
+        <h1><strong>Frequently asked questions:</strong></h1>
+        <div class="wrapper">
+          <button class="toggle">
+            <h3>Where is your main office?</h3>
+            <i class="bi bi-plus icon5"></i>
+          </button>
+          <div class="content5">
+            <p>
+              Lorem ipsum dolor sit amet. Et aperiam deleniti est perspiciatis
+              suscipit aut necessitatibus nemo ut sunt minus est deserunt rerum?
+              Qui assumenda ducimus sed quos repellendus eos sunt odit 33
+              delectus ratione hic eaque voluptatum rem suscipit consequatur. Et
+              quia repudiandae in voluptates rerum sit quaerat reiciendis eos
+              consequatur beatae et voluptas omnis sit illo architecto.
+            </p>
+          </div>
+        </div>
+        <div class="wrapper">
+          <button class="toggle">
+            <h3>How can I adopt?</h3>
+            <i class="bi bi-plus icon5"></i>
+          </button>
+          <div class="content5">
+            <p>
+              Lorem ipsum dolor sit amet. Et aperiam deleniti est perspiciatis
+              suscipit aut necessitatibus nemo ut sunt minus est deserunt rerum?
+              Qui assumenda ducimus sed quos repellendus eos sunt odit 33
+              delectus ratione hic eaque voluptatum rem suscipit consequatur. Et
+              quia repudiandae in voluptates rerum sit quaerat reiciendis eos
+              consequatur beatae et voluptas omnis sit illo architecto.
+            </p>
+          </div>
+        </div>
+        <div class="wrapper">
+          <button class="toggle">
+            <h3>How do I volunteer?</h3>
+            <i class="bi bi-plus icon5"></i>
+          </button>
+          <div class="content5">
+            <p>
+              Lorem ipsum dolor sit amet. Et aperiam deleniti est perspiciatis
+              suscipit aut necessitatibus nemo ut sunt minus est deserunt rerum?
+              Qui assumenda ducimus sed quos repellendus eos sunt odit 33
+              delectus ratione hic eaque voluptatum rem suscipit consequatur. Et
+              quia repudiandae in voluptates rerum sit quaerat reiciendis eos
+              consequatur beatae et voluptas omnis sit illo architecto.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- wave foter -->
 
