--- a/contact.html
+++ b/contact.html
@@ -134,16 +134,16 @@
             </div>
           </div>
         </div>
-        <div class="contactForm">
+        <div class="contactForm" id="error">
           <form>
             <h2>Send Message</h2>
             <div class="inputBox mb-3">
               <label for="fullname" class="form-label">Full Name</label>
-              <input type="text" class="form-control" id="fullname" />
+              <input type="text" class="form-control" id="fullname" required />
             </div>
             <div class="inputBox mb-3">
               <label for="email" class="form-label">Email Address</label>
-              <input type="email" class="form-control" id="email" />
+              <input type="email" class="form-control" id="email" required />
             </div>
             <div class="inputBox mb-3">
               <label for="exampleTextarea1" class="form-label">Message</label>
@@ -151,6 +151,7 @@
                 class="form-control"
                 id="exampleTextarea1"
                 placeholder="Type your message here..."
+                required
               ></textarea>
             </div>
             <button type="submit" class="btn">
