--- a/index.html
+++ b/index.html
@@ -75,26 +75,11 @@
               >
                 Close
               </button>
-              <button
-                type="submit"
-                class="btn btn-primary"
-                onclick="openPopup()"
-              >
-                Submit
-              </button>
+              <button type="submit" class="btn btn-primary">Submit</button>
             </div>
           </div>
         </div>
       </div>
-    </div>
-
-    <!-- Submit modal popup -->
-
-    <div class="popup" id="popup">
-      <img src="img/tick.png" />
-      <h2>Thank you!</h2>
-      <p>Your details has been successfully submitted.</p>
-      <button type="button" onclick="closePopup()">OK</button>
     </div>
 
     <!-- Header and the navbar -->
